--- a/relation_entity_collector/relation_entity_collector.css
+++ b/relation_entity_collector/relation_entity_collector.css
@@ -1,3 +1,4 @@
-#relation-entity-collector input.form-text, #relation-entity-collector select.form-select {
+#relation-entity-collector input.form-text,
+#relation-entity-collector select.form-select {
   width: 100%;
 }
